--- a/index.html
+++ b/index.html
@@ -129,6 +129,26 @@
     </tbody>
 </table>
 
+    <!-- Table for Player Results -->
+<table>
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Played</th>
+            <th>Won</th>
+            <th>Win%</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Greg Crowson</td>
+            <td>7</td>
+            <td>6</td>
+            <td>85.71</td>
+        </tr>
+    </tbody>
+</table>
+    
 <p><a href="https://staplefordccil.github.io/home/" class="button-link">Home Page</a></p>
 
 </body>
